app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: 256, 256, 256;
  --foreground: 23, 23, 23;
  --main: 0, 102, 107;
  --main-font: 255, 255, 255;
  --accent: 178, 241, 29;
  --accent-font: 0, 0, 0;
  
}

[data-theme='dark'] {
  --background: 10, 10, 10;
  --foreground: 237, 237, 237;
}

@font-face {
  font-family: "Mulish";
  src: url(/app/fonts/Mulish.ttf);
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Space";
  src: url(/app/fonts/SpaceMono.ttf);
  font-weight: normal;
  font-style: normal;
}

body {
  color: rgb(var(--foreground));
  background: rgb(var(--background));
}

h1 {
  font-size: 36px;
  font-weight: 700;
  letter-spacing: -1px;
  line-height: 1.2;
  text-align: center;
  margin: 100px 0 40px;
}

h2 {
  font-weight: 400;
}

p {
  margin: 0 0 30px 0;
  font-size: 18px;
}

footer {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 20px;
  background-image: radial-gradient(
    rgb(var(--background)) 2px,
    rgba(0, 0, 0, 0) 2px
  );
  background-size: 4px 4px;
  backdrop-filter: blur(3px);
  -webkit-backdrop-filter: blur(3px);
  -moz-backdrop-filter: blur(3px);
  font-size: 14px;
  line-height: 14px;
}

footer::before {
  display: block;
  content: "";
  position: absolute;
  top: -1px;
  left: 0;
  right: 0;
  height: 1px;
  background: rgb(var(--main));
  opacity: 0.2;
}

code {
  font-family: input-mono, monospace;
  font-weight: 600;
  font-style: normal;
  background-color: rgb(var(--foreground));
  color: rgb(var(--background));
  border-radius: 5px;
  padding: 0 5px;
  transition: background-color 0.5s;
  white-space: nowrap;
}

code:hover {
  background-color: rgb(var(--accent));
  transition: background-color 0.5s;
}

::-webkit-scrollbar {
  height: 5px;
  width: 5px;
  background: rgb(var(--background));
}

::-webkit-scrollbar-thumb {
  background: rgb(var(--main));
  -webkit-border-radius: 1ex;
}

::-webkit-scrollbar-corner {
  background: rgb(var(--background));
}

html {
  scroll-snap-type: y mandatory;
}

.wallpaper {
  background-image: url("/portfolio/tile.jpg");
  background-repeat: repeat;
  background-size: 300px 300px;
  opacity: 0.1;
  width: 100vw;
  height: 100vh;
  position: fixed;
  z-index: 0;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  pointer-events: none;
}

section {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  scroll-snap-align: center;
  perspective: 500px;
}

section > div {
  width: 600px;
  min-height: fit-content;
  max-height: calc(100vh - 180px);
  position: relative;
  margin: 20px;
  overflow: hidden;
  padding: 10px 20px;
  border-radius: 5px;
  background-color: rgba(var(--background), 0.7);
}

section > h2 {
  margin: 0;
  color: rgb(var(--foreground));
  left: calc(50% + 380px);
  font-size: 56px;
  font-weight: 700;
  letter-spacing: -3px;
  line-height: 1.2;
  position: absolute;
  writing-mode: vertical-rl;
  text-orientation: mixed;
}

section > h3 {
  display: none;
  position: relative;
  color: rgb(var(--foreground));
  font-size: 56px;
  font-weight: 700;
  letter-spacing: -3px;
  line-height: 1.2;
}

@media only screen and (max-width: 920px) {
  section > h2 {
    left: unset;
    right: 20px;
  }
}

@media only screen and (max-width: 810px) {
  section > div {
    margin-right: 110px;
    overflow: scroll;
  }
}

@media only screen and (max-width: 480px) {
  section {
    scroll-snap-align: unset;
    flex-direction: column;
    height: fit-content;
  }

  section > h2 {
    display: none;
  }

  section > h3 {
    display: block;
  }

  section > div {
    width: 95vw;
    margin: 10px auto;
  }
}

.container {
  margin-bottom: 80px;
}

.mainPage {
  margin: 0 auto;
  max-width: 90%;
}

@media screen and (max-width: 768px) {
  .mainPage {
    max-width: 100%;
    margin: 0 5px;
  }
  
}

.title {
  background-color: rgb(var(--main));
  color: rgb(var(--main-font));
  padding: 1em;
  border-radius: 5px;
  width: fit-content;
  margin: 1em auto;
}

.progress {
  position: fixed;
  left: 0;
  right: 0;
  height: 10px;
  background: rgb(var(--accent));
  bottom: 0;
  z-index: 300;
  transform-origin: 0%;
}

